sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for(i<-0 to array.lenght){
    if(isSmaller(i,i+1)){
      swap(i,i+1);
    }
  }
}